package headfirst.designpatterns.strategy;

/**
 * @author: sjmp1573
 * @date: 2022/4/29 10:43
 * @description:
 */

public interface FlyBehavior {
    void fly();
}
