package headfirst.designpatterns.strategy;

/**
 * @author: sjmp1573
 * @date: 2022/4/29 10:43
 * @description:
 */

public class MallardDuck extends Duck {

    @Override
    void display() {
        System.out.println("I'm a real Mallard duck");
    }

}
