package headfirst.designpatterns.strategy;

/**
 * @author: sjmp1573
 * @date: 2022/4/29 10:44
 * @description:
 */

public class ModelDuck extends Duck{

    @Override
    void display() {
        System.out.println("I'm a model duck");
    }

}
