@startuml

abstract class Duck{
    FlyBehavior flyBehavior
    display()
}


interface FlyBehavior{
    fly()
}

class MallardDuck{
    display()
}
class RedheadDuck{
    display()
}
class RubberDuck{
    display()
}
class ModelDuck{
    display()
}

class FlyWithWings{
    fly()
}

class FlyNoWay{
    fly()
}


Duck <|-- MallardDuck
Duck <|-- RedheadDuck
Duck <|-- RubberDuck
Duck <|-- ModelDuck

Duck-->FlyBehavior


FlyBehavior <|.. FlyWithWings
FlyBehavior <|.. FlyNoWay

@enduml